--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1{color:grey;font-family:verdana}
     color: black;
     width: 300px;
     padding: 20px;
-    border-radius: 25px;
+    border: 25px;
     text-align: center;
 }
 
